// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<a
  className="Command__CommandContainer-sc-13akgtp-0 kpOwVk"
  id={null}
  label="Command"
  onClick={null}
  title="Command"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Command__CommandIcon-sc-13akgtp-2 kHbmnU"
    color={null}
    data-icon="circle"
    data-prefix="fas"
    focusable="false"
    id={null}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <a
    className="Typography__LinkText-sc-19auepv-1 fLIgSj"
    fontSize="inherit"
    fontWeight={600}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    Command
  </a>
</a>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 iAZTTM"
  id={null}
  rows={null}
>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 kpOwVk"
    id={null}
    label="Active"
    onClick={null}
    title="Active"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <a
      className="Typography__LinkText-sc-19auepv-1 fLIgSj"
      fontSize="inherit"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Active
    </a>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 fdcIZT"
    id={null}
    label="Disabled"
    onClick={null}
    title="Disabled"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <a
      className="Typography__LinkText-sc-19auepv-1 fLIgSj"
      fontSize="inherit"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Disabled
    </a>
  </a>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 iAZTTM"
  id={null}
  rows={null}
>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 hRAXMa"
    id={null}
    label="Small"
    onClick={null}
    title="Small"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <a
      className="Typography__LinkText-sc-19auepv-1 fLIgSj"
      fontSize="inherit"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Small
    </a>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 kpOwVk"
    id={null}
    label="Standard"
    onClick={null}
    title="Standard"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <a
      className="Typography__LinkText-sc-19auepv-1 fLIgSj"
      fontSize="inherit"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Standard
    </a>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 ekpceJ"
    id={null}
    label="Large"
    onClick={null}
    title="Large"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <a
      className="Typography__LinkText-sc-19auepv-1 fLIgSj"
      fontSize="inherit"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Large
    </a>
  </a>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 iAZTTM"
  id={null}
  rows={null}
>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 kpOwVk"
    id={null}
    label="Icon-Left"
    onClick={null}
    title="Icon-Left"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <a
      className="Typography__LinkText-sc-19auepv-1 fLIgSj"
      fontSize="inherit"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Icon-Left
    </a>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 fdpUKs"
    id={null}
    label="Icon-Top"
    onClick={null}
    title="Icon-Top"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <a
      className="Typography__LinkText-sc-19auepv-1 fLIgSj"
      fontSize="inherit"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Icon-Top
    </a>
  </a>
  <a
    className="Command__CommandContainer-sc-13akgtp-0 hvWYKg"
    id={null}
    label="Icon-Right"
    onClick={null}
    title="Icon-Right"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-circle fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru Command__CommandIcon-sc-13akgtp-2 kHbmnU"
      color={null}
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      id={null}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <a
      className="Typography__LinkText-sc-19auepv-1 fLIgSj"
      fontSize="inherit"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Icon-Right
    </a>
  </a>
</section>
`;
